objects/Apttus__Wizard2__c.object
<CustomObject>
    <description>A runtime instance of the wizard design</description>
    <fields>
        <fullName>Apttus__Action__c</fullName>
        <formula>IF(TEXT(Apttus__Status__c) = &apos;In Progress&apos;, HYPERLINK(&quot;/apex/Wizard?id=&quot; &amp;Id,&quot;Continue&quot;), HYPERLINK(&quot;/apex/Wizard?id=&quot; &amp;Id,&quot;Review&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action (DEPRECATED)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextId__c</fullName>
        <description>Context record this wizard record is associated with</description>
        <inlineHelpText>Context record this wizard record is associated with</inlineHelpText>
        <label>Context Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextType__c</fullName>
        <description>Context type this wizard record is associated with</description>
        <inlineHelpText>Context type this wizard record is associated with</inlineHelpText>
        <label>Context Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ExternalId__c</fullName>
        <description>External id</description>
        <externalId>true</externalId>
        <inlineHelpText>External id</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <description>Status of this wizard runtime</description>
        <inlineHelpText>Status of this wizard runtime</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__SubmittedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user who submitted this runtime</description>
        <inlineHelpText>Lookup to the user who submitted this runtime</inlineHelpText>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wizard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardDesignId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to wizard design</description>
        <inlineHelpText>Lookup to wizard design</inlineHelpText>
        <label>Wizard Design</label>
        <referenceTo>Apttus__WizardDesign__c</referenceTo>
        <relationshipLabel>Wizards</relationshipLabel>
        <relationshipName>Wizards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Wizard</label>
    <nameField>
        <label>Wizard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>